--- a/content/projects/v2.md
+++ b/content/projects/v2.md
@@ -1,13 +1,11 @@
 ---
 date: '2016-12-01'
-title: 'Personal Website V2'
-github: 'https://github.com/bchiang7/v2'
-external: 'https://bchiang7.github.io/v2/'
+title: 'Brute It'
+github: ''
+external: 'https://anugrahsr.github.io/posts/THM-Brute-It/'
 tech:
-  - Jekyll
-  - SCSS
-  - JS
+  - Tryhackme
 showInProjects: true
 ---
 
-Second iteration of my personal website. Designed and developed with a conscious effort to avoid using any superfluous frameworks like Bootstrap.
+Blog on learning how to brute, hash cracking and escalate privileges in this box!
