--- a/content/projects/v3.md
+++ b/content/projects/v3.md
@@ -1,13 +1,11 @@
 ---
 date: '2017-10-01'
-title: 'Personal Website V3'
-github: 'https://github.com/bchiang7/bchiang7.github.io'
-external: 'https://bchiang7.github.io/v3/'
+title: 'Skynet'
+github: ''
+external: 'https://anugrahsr.github.io/posts/THM-Skynet/'
 tech:
-  - Jekyll
-  - SCSS
-  - JS
+  - Tryhackme
 showInProjects: true
 ---
 
-Third iteration of my personal website built with Jekyll and hosted on GitHub Pages.
+A vulnerable Terminator themed Linux machine.
